# safe_duration_cast

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  basic.cpp  demo_of_problem_to_be_solved.cpp
exhaustivetests/: CMakeLists.txt  validate_against_stdchrono.cpp  validate_floats_against_stdchrono.cpp
fuzzing/: CMakeLists.txt  chrono.cpp  floating.cpp
include/: chronoconv.hpp
include/detail/: chronoconv_detail.hpp  lossless_conversion.hpp  safe_float_conversion.hpp  stdutils.hpp
include/safe_duration_cast/: chronoconv.hpp
include/safe_duration_cast/detail/: chronoconv_detail.hpp  safe_float_conversion.hpp
speedtest/: CMakeLists.txt  LehmerRng.hpp  sunshine.cpp
tests/: CMakeLists.txt  basic_test.cpp  bool_representations.cpp  chronoconv_floating_test.cpp  chronoconv_integers_test.cpp  chronoconv_test.cpp  integer_conversions_test.cpp  testsupport.hpp  unittest_main.cpp
